--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,11 @@ export(plotTimeSeries)
 export(plotWindRose)
 export(renderHighcharts)
 export(save.graphic)
+export(toChain2)
+export(toGeoJSON)
+export(toJSON2)
+export(toJSONArray)
+export(toJSONArray2)
 import(RCurl)
 import(base64enc)
 import(data.table)
