--- a/inst/libraries/highcharts/config.yml
+++ b/inst/libraries/highcharts/config.yml
@@ -7,6 +7,7 @@ highcharts:
     - js/highcharts-3d.js
     - js/exporting.js
     - js/solid-gauge.src.js
+    - js/drilldown.js
   cdn:
     jshead:
       - "http://code.jquery.com/jquery-1.9.1.min.js"
@@ -16,3 +17,4 @@ highcharts:
       - "http://code.highcharts.com/highcharts-3d.js"
       - "http://code.highcharts.com/modules/exporting.js"
       - "http://code.highcharts.com/modules/solid-gauge.src.js"
+      - "http://code.highcharts.com/modules/drilldown.js"
